# ONEMenu-for-PSVita-Japanese

./: README.md  english_us.txt
ONEMenu/: CMakeLists.txt  CMakeLists.txt~
ONEMenu/pkg/sce_sys/livearea/contents/: template.xml
ONEMenu/src/: font.c  graphics.c  graphics.h  main.c
